# mcp-obsidian-sse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/mcp_obsidian_sse/: obsidian.py  server.py
